tests/baselines/reference/privateNameConstructorReserved.errors.txt
privateNameConstructorReserved.ts(2,5): error TS18012: '#constructor' is a reserved word.


==== privateNameConstructorReserved.ts (1 errors) ====
    class A {
        #constructor() {}      // Error: `#constructor` is a reserved word.
        ~~~~~~~~~~~~
!!! error TS18012: '#constructor' is a reserved word.
    }
    